qiaof: fix index003 bg overflow:hidden

--- a/mobile/css/theme/theme003.less
+++ b/mobile/css/theme/theme003.less
@@ -18,6 +18,7 @@
 	width:100%;
 	height:100%;
 	background:transparent;
+	overflow:hidden;
 }
 .main .theme3_main_bg{
 	width:100%;
